More reader factory tests
Disabling the shared subscription test